<resources>
    <string name="app_name">smash international</string>

    <string name="login">login</string>
    <string name="alert_logout">Are your sure you want to Logout ?</string>
    <string name="Password">Password</string>
    <string name="collection">Collection</string>
    <string name="update_customer_location">Update customer location</string>
    <string name="about_smash">About smash</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="sheduled_work">Sheduled work</string>
    <string name="new_lead">New lead</string>

    <!-- alert-->
    <string name="no_network_connection">No Network Connection</string>
    <string name="alert_no_internet_please_check">Please check your network \\n connection and try again</string>
    <string name="ok">ok</string>
    <string name="do_you_want_logout">do you want logout</string>
    <string name="cancel">cancel</string>


    <!--drawer -->
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>

    <string name="customer_name">Customer Name</string>
    <string name="location">Location</string>
    <string name="pending_amount">Pending Amount</string>
    <string name="date">Date</string>
    <string name="update_status">Update Status</string>
    <string name="please_waite">please waite..</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="customer_id">Customer ID</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="sms_number">SMS Number</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="bill_id">Bill ID</string>
    <string name="completed">Completed</string>
    <string name="Pending">Pending</string>
    <string name="current_status">CURRENT STATUS</string>
    <string name="phone_number">Phone No</string>
    <string name="sms_phone_number">Sms Phone No</string>
    <string name="completed_amount">Completed amount</string>
    <string name="total_amount">total amount</string>
    <string name="pending_amount_cannot_be_blank">Pending amount cannot be blank\"</string>
    <string name="billid_cannot_be_blank">Bill id cannot be blank</string>
    <string name="please_select_a_reason">Please select a reason</string>
    <string name="view">view</string>
    <string name="pic_place">find place</string>
    <string name="username_or_password_incorrect">Username or password is incorrect</string>
    <string name="user_name">user_name</string>
    <string name="user_image">user_image</string>
    <string name="fetching_current_location">Fetching current location</string>
    <string name="location_updated">Location Updated</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="remove_location_updates">remove location updates</string>
    <string name="currency">Currency</string>
    <string name="gps_network_not_enabled">Please enable location services on your device ? </string>
    <string name="open_location_settings">Open location settings</string>
    <string name="permission_required">Permission required</string>
    <string name="enabe_gps">Enabe gps</string>
    <string name="pending_">pending</string>
    <string name="completed_">completed</string>
    <string name="submit">submit</string>
    <string name="pic_shop_location">pic shop location</string>
    <string name="existing_customer">existing customer</string>
    <string name="new_customer">new customer</string>
    <string name="searching">searching..</string>
    <string name="worktype_pending">pending</string>
    <string name="worktype_completed">completed</string>
    <string name="worktype_shop">shop</string>
    <string name="successfully_new_lead_created">Successfully new lead created</string>
    <string name="please_try_again">Please try again</string>
    <string name="update">update</string>
    <string name="change_password">Change Password ?</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_and_new_password_notmatching">Old and new password not matching.</string>
    <string name="updating">Updating..</string>
    <string name="user_profile">Profile</string>
    <string name="not_on_the_premises">You are not in the shops premises</string>
    <string name="reason_title">Reason for collection zero amount entry</string>
    <string name="reason_1">Reason 1</string>
    <string name="reason_2">Reason 2</string>
    <string name="reason_3">Reason 3</string>
    <string name="shops">SHOPS</string>
    <string name="shop_details">shop details</string>
    <string name="do_you_update_customer_location">Do you want to update customer location.</string>
    <string name="invoice">Invoice</string>
    <string name="date_vice_pending_work">Pending Woks Date Vise</string>

</resources>
