<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/map_size">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/MVmap"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/map_size" />

                    <Button
                        android:id="@+id/BTNSelectPlace"
                        style="@style/AppAccentButtonRadious"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/small_button_height"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="25dp"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/selector_primary_to_primarydark_strock"
                        android:drawableLeft="@drawable/place_picker"
                        android:drawablePadding="5dp"
                        android:paddingBottom="3dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="3dp"
                        android:text="@string/pic_shop_location"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small_text_size" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_primary_bottom_strock"
                    android:padding="10dp">

                    <RelativeLayout
                        android:id="@+id/Lay1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="10dp"
                        android:layout_toLeftOf="@+id/Lay2">

                        <TextView
                            android:id="@+id/TVname"
                            style="@style/AppTextViewLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/current_status" />

                        <RadioGroup
                            android:id="@+id/RGstatus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/TVname"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/RBexisting"
                                style="@style/AppTextViewSubTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/colorPrimary"
                                android:checked="true"
                                android:text="@string/existing_customer" />

                            <RadioButton
                                android:id="@+id/RBnew"
                                style="@style/AppTextViewSubTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:buttonTint="@color/colorPrimary"
                                android:text="@string/new_customer" />
                        </RadioGroup>

                        <EditText
                            android:id="@+id/ETCustomerName"
                            style="@style/EdittextPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/RGstatus"
                            android:background="@drawable/shape_gray_with_stroke"
                            android:hint="@string/customer_name"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp" />

                        <EditText
                            android:id="@+id/ETCustomerId"
                            style="@style/EdittextPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/ETCustomerName"
                            android:layout_marginTop="9dp"
                            android:background="@drawable/shape_gray_with_stroke"
                            android:hint="@string/customer_id"
                            android:inputType="text"
                            android:paddingBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingTop="5dp" />

                        <LinearLayout
                            android:id="@+id/Lay6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ETCustomerId"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">


                            <EditText
                                android:id="@+id/ETTelephone"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:hint="@string/telephone"
                                android:inputType="number"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/Lay5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Lay6"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/ETEmail"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />

                            <EditText
                                android:id="@+id/ETSms"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:hint="@string/sms_number"
                                android:inputType="number"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/Lay4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Lay5"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/ETAddress1"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:gravity="top"
                                android:hint="@string/address_1"
                                android:inputType="textMultiLine"
                                android:minLines="4"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />

                            <EditText
                                android:id="@+id/ETAddress2"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:gravity="top"
                                android:hint="@string/address_2"
                                android:inputType="textMultiLine"
                                android:minLines="4"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/Lay3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Lay4"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/ETamount"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:hint="@string/pending_amount"
                                android:inputType="number"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />

                            <EditText
                                android:id="@+id/ETcompletedAmount"
                                style="@style/EdittextPrimary"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_weight=".5"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:hint="@string/completed_amount"
                                android:inputType="numberDecimal"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/Lay3_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Lay3"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/ETbillId"
                                style="@style/EdittextPrimary"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_gray_with_stroke"
                                android:hint="@string/bill_id"
                                android:paddingBottom="5dp"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:paddingTop="5dp" />


                        </LinearLayout>

                        <Button
                            android:id="@+id/BTNupdateStatus"
                            style="@style/AppAccentButtonRadious"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/item_button_height"
                            android:layout_alignParentRight="true"
                            android:layout_below="@+id/Lay3_1"
                            android:layout_marginBottom="25dp"
                            android:layout_marginTop="15dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp"
                            android:text="@string/submit" />
                    </RelativeLayout>

                </RelativeLayout>
            </LinearLayout>

            <include
                android:id="@+id/LAYnodata"
                layout="@layout/layout_nodata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone" />

            <include layout="@layout/layout_no_internet_connection" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>