<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_primary_bottom_strock"
            android:orientation="horizontal"
            android:padding="10dp">


            <RelativeLayout
                android:id="@+id/Lay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/Lay2">

                <TextView
                    android:id="@+id/TVname"
                    style="@style/AppTextViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name" />

                <TextView
                    android:id="@+id/TVid"
                    style="@style/AppTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/TVname"
                    android:text="ID" />


                <TextView
                    android:id="@+id/TVlocationT"
                    style="@style/AppTextViewLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/TVname"
                    android:layout_marginTop="8dp"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/TVlocation"
                    style="@style/AppTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/TVlocationT"
                    android:text="Location" />

                <TextView
                    android:id="@+id/TVp"
                    style="@style/AppTextViewSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/TVlocation"
                    android:layout_marginTop="8dp"
                    android:text="@string/pending_amount"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/TVamount"
                    style="@style/AppTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/TVp"
                    android:text="1000 INR" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Lay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/Lay1"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/TVdateL"
                    style="@style/AppTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/TVdate"
                    style="@style/AppTextViewSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/TVdateL"
                    android:layout_marginTop="2dp"
                    android:text="12/12/2017" />

                <Button
                    android:id="@+id/BTNupdateStatus"
                    style="@style/AppAccentButtonRadious"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_button_height"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/update_status" />

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>