<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar"
    android:layout_alignParentBottom="true"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/IMGpending"
            android:layout_width="@dimen/pending_complete_size"
            android:layout_height="@dimen/pending_complete_size"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/TVpendingAmountl"
            style="@style/AppTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/IMGpending"
            android:layout_toRightOf="@+id/IMGpending"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/pending_amount"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVpendingAmount"
            style="@style/AppTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/IMGpending"
            android:layout_toEndOf="@+id/IMGpending"
            android:layout_toRightOf="@+id/IMGpending"
            android:text="1000 INR"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="1sp"
        android:layout_height="@dimen/action_bar"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/colorPrimaryDark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/IMGcompleted"
            android:layout_width="@dimen/pending_complete_size"
            android:layout_height="@dimen/pending_complete_size"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/TVcompletedAmountl"
            style="@style/AppTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/IMGcompleted"
            android:layout_toRightOf="@+id/IMGcompleted"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/completed_amount"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVcompletedAmount"
            style="@style/AppTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/IMGcompleted"
            android:layout_toEndOf="@+id/IMGcompleted"
            android:layout_toRightOf="@+id/IMGcompleted"
            android:text="1000 INR"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

    <View
        android:layout_width="1sp"
        android:layout_height="@dimen/action_bar"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@color/colorPrimaryDark" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/TVtotalAmountl"
            style="@style/AppTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/total_amount"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TVtotalAmount"
            style="@style/AppTextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TVtotalAmountl"
            android:text="1000 INR"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RelativeLayout>

</LinearLayout>